HUB-4784: Modify workflowalizer to parse encrypted component metadata
.. for components newer than 4.1

HUB-4784 (Modify Workflowalizer To Support Encrypted Components)